added an incomplete (?) c metamodel

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@
 *.exe
 *.ecorediag
 MPSProjects/MbeddrExample/.mps/workspace.xml
+EclipseProjects/MbeddrComponentLanguage/.settings/org.eclipse.core.resources.prefs
