--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,6 @@
 *.ecorediag
 MPSProjects/MbeddrExample/.mps/workspace.xml
 EclipseProjects/MbeddrComponentLanguage/.settings/org.eclipse.core.resources.prefs
+MPSProjects/MbeddrExample/solutions/Main/classes_gen/ComponentsExample/trace.info
+MPSProjects/MbeddrExample/solutions/Main/classes_gen/ComponentsExample/trace.info
+MPSProjects/MbeddrExample/solutions/Main/source_gen/ComponentsExample/trace.info
