added more c metamodel

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@ EclipseProjects/MbeddrComponentLanguage/.settings/org.eclipse.core.resources.pre
 MPSProjects/MbeddrExample/solutions/Main/classes_gen/ComponentsExample/trace.info
 MPSProjects/MbeddrExample/solutions/Main/classes_gen/ComponentsExample/trace.info
 MPSProjects/MbeddrExample/solutions/Main/source_gen/ComponentsExample/trace.info
+MPSProjects/MbeddrExample/solutions/Main/source_gen.caches/ComponentsExample/generated
