--- a/EclipseProjects/MbeddrComponentLanguage/.settings/org.eclipse.core.resources.prefs
+++ b/EclipseProjects/MbeddrComponentLanguage/.settings/org.eclipse.core.resources.prefs
@@ -1,3 +1,4 @@
 eclipse.preferences.version=1
 encoding//model/C.ecorediag=UTF-8
-encoding//model/Module.ecorediag=UTF-8
+encoding//transformation/mbeddr2C.dsltrans=UTF-8
+encoding//transformation/mbeddr2C.dsltrans_diagram=UTF-8
