--- a/EclipseProjects/MbeddrComponentLanguage/.project
+++ b/EclipseProjects/MbeddrComponentLanguage/.project
@@ -20,9 +20,15 @@
 			<arguments>
 			</arguments>
 		</buildCommand>
+		<buildCommand>
+			<name>dsltrans.resource.dsltranstext.builder</name>
+			<arguments>
+			</arguments>
+		</buildCommand>
 	</buildSpec>
 	<natures>
 		<nature>org.eclipse.jdt.core.javanature</nature>
 		<nature>org.eclipse.pde.PluginNature</nature>
+		<nature>dsltrans.resource.dsltranstext.nature</nature>
 	</natures>
 </projectDescription>
