--- a/EclipseProjects/SyVoltProperty2Himesis/.settings/org.eclipse.core.resources.prefs
+++ b/EclipseProjects/SyVoltProperty2Himesis/.settings/org.eclipse.core.resources.prefs
@@ -1,2 +1,3 @@
 eclipse.preferences.version=1
 encoding//examples/FamiliesToPersons/Properties_Syvolt/motherFather2.syvolt=UTF-8
+encoding//examples/pivots/communityPerson.syvolt_diagram=UTF-8
