contratc change and bug identification in the transformation

--- a/EclipseProjects/MbeddrComponentLanguage/.settings/org.eclipse.core.resources.prefs
+++ b/EclipseProjects/MbeddrComponentLanguage/.settings/org.eclipse.core.resources.prefs
@@ -4,5 +4,6 @@ encoding//contracts/contract1.syvolt_diagram=UTF-8
 encoding//contracts/contract_simple_init.syvolt_diagram=UTF-8
 encoding//model/C.ecorediag=UTF-8
 encoding//model/Module.ecorediag=UTF-8
+encoding//transformation/java5.dsltrans_diagram=UTF-8
 encoding//transformation/mbeddr2C.dsltrans=UTF-8
 encoding//transformation/mbeddr2C.dsltrans_diagram=UTF-8
